<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:background="@drawable/gradient_bg"
              android:orientation="vertical"
              tools:context=".MainActivity">

    <ScrollView
            android:id="@+id/ScrollView01"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center">

            <TextView
                    android:id="@+id/tv_app_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/app_name"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                    android:id="@+id/cv_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="#fff"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="5dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                    <TextView
                            android:id="@+id/tv_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/welcome"
                            android:textColor="#363A43"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                    <TextView
                            android:id="@+id/tv_loan_amount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/loan_amount"
                            android:textColor="#7A8089"
                            android:textSize="16sp" />

                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_loan_amount"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:layout_marginTop="20dp">

                        <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/et_loan_amount"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:imeOptions="actionGo"
                                android:hint="@string/enter_loan_amount"
                                android:inputType="numberDecimal"
                                android:textColor="#363A43"
                                android:textColorHint="#7A8089" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                            android:id="@+id/tv_loan_interest"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/loan_interest"
                            android:textColor="#7A8089"
                            android:textSize="16sp" />

                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_loan_interest"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:layout_marginTop="20dp">

                        <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/et_loan_interest"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:imeOptions="actionGo"
                                android:hint="@string/enter_loan_interest"
                                android:inputType="numberDecimal"
                                android:textColor="#363A43"
                                android:textColorHint="#7A8089" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                            android:id="@+id/tv_months"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/months_to_pay"
                            android:textColor="#7A8089"
                            android:textSize="16sp" />

                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_months"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:layout_marginTop="20dp">

                        <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/et_months"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:imeOptions="actionGo"
                                android:hint="@string/enter_months"
                                android:inputType="number"
                                android:textColor="#363A43"
                                android:textColorHint="#7A8089" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                            android:id="@+id/btn_calculate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:background="@drawable/projectbuttons"
                            android:text="@string/calculate"
                            android:textColor="#fff"
                            android:textSize="18sp"/>

                    <Button
                            android:id="@+id/btn_reset"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:background="@drawable/projectbuttons"
                            android:text="@string/reset"
                            android:textColor="#fff"
                            android:textSize="18sp"/>

                    <TextView
                            android:id="@+id/tv_monthly_payment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/monthly_payment"
                            android:textColor="#363A43"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
